--- a/dev-lab5/buildspec.yml
+++ b/dev-lab5/buildspec.yml
@@ -1,10 +1,20 @@
 version: 0.2
  
 phases:
+  pre-build:
+    -  echo Preparing build `date`
   build:
     commands:
       - mvn clean
       - mvn install
+      - mvn compile
+  post-build:
+      - echo Build completed on `date` creating package for deployment, not yet implemented
+      - mvn package
+  test:
+    - echo starting test `date`
+    - mvn test
 artifacts:
   files:
-    - 'target/MyApp.jar'
+    - target/dev-lab5-0.0.1-SNAPSHOT.jar
+    
