updated stage commands

--- a/dev-lab5/buildspec.yml
+++ b/dev-lab5/buildspec.yml
@@ -2,18 +2,21 @@ version: 0.2
  
 phases:
   pre-build:
-    -  echo Preparing build `date`
+    commands:
+      - echo Preparing build `date`
   build:
     commands:
       - mvn clean
       - mvn install
       - mvn compile
   post-build:
+    commands:
       - echo Build completed on `date` creating package for deployment, not yet implemented
       - mvn package
   test:
-    - echo starting test `date`
-    - mvn test
+    commands:
+      - echo starting test `date`
+      - mvn test
 artifacts:
   files:
     - target/dev-lab5-0.0.1-SNAPSHOT.jar
