--- a/dev-lab5/buildspec.yml
+++ b/dev-lab5/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
  
 phases:
-  pre-build:
+  pre_build:
     commands:
       - echo Preparing build `date`
   build:
@@ -9,7 +9,7 @@ phases:
       - mvn clean
       - mvn install
       - mvn compile
-  post-build:
+  post_build:
     commands:
       - echo Build completed on `date` creating package for deployment, not yet implemented
       - mvn package
