--- a/dev-lab5/buildspec.yml
+++ b/dev-lab5/buildspec.yml
@@ -4,8 +4,7 @@ phases:
   pre_build:
     commands:
       - echo starting pre_build `date`
-      - echo Delete target Directory
-      - mvn clean
+      - echo Delete target Directory - mvn clean - not needed is clean because codebuild creates new
       - echo Validate project correctness
       - mvn validate      
   build:
