--- a/dev-lab5/buildspec.yml
+++ b/dev-lab5/buildspec.yml
@@ -25,7 +25,9 @@ phases:
       - echo deploy — copies the final package to the remote repository - not yet implemented    
       - echo build complete `date`
       - echo old artifact was target/dev-lab5-0.0.1-SNAPSHOT.jar changed to build*/**
+      - echo 'pwd'
+      - echo 'ls'
 artifacts:
   files:
-    - build*/**
+    - dev_lab5/dev-lab5-0.0.1-SNAPSHOT.jar
     
