--- a/dev-lab5/buildspec.yml
+++ b/dev-lab5/buildspec.yml
@@ -30,9 +30,9 @@ phases:
       - cd target
       - echo `pwd`
       - echo `ls`
-      - cd ..
+      
       
 artifacts:
   files:
-    - target/dev-lab5-0.0.1-SNAPSHOT.jar
+    - dev-lab5-0.0.1-SNAPSHOT.jar
     
